--- a/_columns/Stock_Of_the_Day/zh-cn/2024-12-16.md
+++ b/_columns/Stock_Of_the_Day/zh-cn/2024-12-16.md
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: >-
-  Amphenol, IBD Stock Of The Day, Showing Accelerating Growth
+  Amphenol, IBD Stock Of The Day, Showing Accelerating Growth	Amphenol 是当今 IBD 股票，呈现加速增长
 image: /assets/img/stock-of-the-day/2024-12-16.jpg
 date: 2024-12-16 16:40 -0800
 author: PATRICK SEITZ
@@ -12,67 +12,85 @@ author: PATRICK SEITZ
 
 
 
-**Amphenol** ([APH](https://research.investors.com/quote.aspx?symbol=APH)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the electronic components maker notches a record high on accelerating sales and earnings growth.  
+**Amphenol** ([APH](https://research.investors.com/quote.aspx?symbol=APH)) is the [IBD Stock Of The Day](https://www.investors.com/research/ibd-stock-of-the-day/) as the electronic components maker notches a record high on accelerating sales and earnings growth.  
+**Amphenol** （[APH](https://research.investors.com/quote.aspx?symbol=APH)） 是 [IBD 今日最佳股票](https://www.investors.com/research/ibd-stock-of-the-day/)，因为这家电子元件制造商在加速销售和盈利增长方面创下历史新高。
 
 
-In intraday trading on the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/), Amphenol stock reached an all-time high of 75.78.  
+In intraday trading on the [stock market today](https://www.investors.com/news/stock-market-today-stock-market-news/), Amphenol stock reached an all-time high of 75.78.  
+在[今天的股市](https://www.investors.com/news/stock-market-today-stock-market-news/)盘中交易中，Amphenol 股票创下 75.78 的历史新高。
 
 
 
 
-With the move higher, it also cleared a short [consolidation pattern](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/) with a 74.92 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/), according to [IBD analysis](https://get.investors.com/ibd-live/). Amphenol stock rose 2.3% to close at 75.35.  
+With the move higher, it also cleared a short [consolidation pattern](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/) with a 74.92 [buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/), according to [IBD analysis](https://get.investors.com/ibd-live/). Amphenol stock rose 2.3% to close at 75.35.  
+根据 [IBD 分析](https://get.investors.com/ibd-live/)，随着走高，它还以 74.92 [的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)清除了一个短暂的[盘整模式](https://www.investors.com/how-to-invest/investors-corner/shopify-stock-consolidation-pattern-led-to-beautiful-gains/)。安费诺股价上涨 2.3%，收于 75.35。
 
 
-On Oct. 23, Amphenol stock touched a buy point of 70.84 from a 17-week consolidation period, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq) charts. That occurred after it delivered better-than-expected results for the [third quarter](https://www.businesswire.com/news/home/20241023139704/en/).  
+On Oct. 23, Amphenol stock touched a buy point of 70.84 from a 17-week consolidation period, according to [IBD MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq) charts. That occurred after it delivered better-than-expected results for the [third quarter](https://www.businesswire.com/news/home/20241023139704/en/).  
+根据 [IBD MarketSurge](https://get.investors.com/marketsurge/?src=apa1bq) 图表，10 月 23 日，Amphenol 股票在 17 周的盘整期内触及 70.84 的买入点。这是在第三[季度](https://www.businesswire.com/news/home/20241023139704/en/)的业绩好于预期之后发生的。
 
 
-Amphenol earned an adjusted 50 cents a share, up 28% year over year, on sales of $4.04 billion, up 26%, in the September quarter. Meanwhile, analysts polled by FactSet had expected earnings of 45 cents a share on sales of $3.81 billion.  
+Amphenol earned an adjusted 50 cents a share, up 28% year over year, on sales of $4.04 billion, up 26%, in the September quarter. Meanwhile, analysts polled by FactSet had expected earnings of 45 cents a share on sales of $3.81 billion.  
+Amphenol 调整后每股收益 50 美分，同比增长 28%，9 月季度销售额为 40.4 亿美元，增长 26%。与此同时，接受 FactSet 调查的分析师预计每股收益为 45 美分，销售额为 38.1 亿美元。
 
 
-The Wallingford, Conn.-based company has now posted four straight quarters of accelerating sales and earnings growth.  
+The Wallingford, Conn.-based company has now posted four straight quarters of accelerating sales and earnings growth.  
+这家总部位于康涅狄格州沃灵福德的公司现已连续四个季度实现销售和盈利加速增长。
 
 
-Amphenol Stock Gets AI Data Center Lift
----------------------------------------
+Amphenol Stock Gets AI Data Center LiftAmphenol Stock 获得 AI 数据中心提升
+------------------------------------------------------------------
 
 
-Amphenol designs and manufactures electrical, electronic and fiber-optic connectors and interconnect systems, antennas, sensors and sensor-based products and coaxial and high-speed specialty cable.  
+Amphenol designs and manufactures electrical, electronic and fiber-optic connectors and interconnect systems, antennas, sensors and sensor-based products and coaxial and high-speed specialty cable.  
+Amphenol 设计和制造电气、电子和光纤连接器和互连系统、天线、传感器和基于传感器的产品以及同轴和高速特种电缆。
 
 
-It serves a diverse set of customers in the interconnect market. Further, its products are used in automotive, broadband communications, commercial aerospace, defense, industrial, information technology, mobile communications and other applications.  
+It serves a diverse set of customers in the interconnect market. Further, its products are used in automotive, broadband communications, commercial aerospace, defense, industrial, information technology, mobile communications and other applications.  
+它为互连市场中的各种客户提供服务。此外，其产品还用于汽车、宽带通信、商业航空航天、国防、工业、信息技术、移动通信和其他应用。
 
 
-In a client note Monday, JPMorgan analyst Samik Chatterjee reiterated his overweight rating on Amphenol stock.  
+In a client note Monday, JPMorgan analyst Samik Chatterjee reiterated his overweight rating on Amphenol stock.  
+在周一的一份客户报告中，摩根大通分析师 Samik Chatterjee 重申了他对 Amphenol 股票的增持评级。
 
 
-The company has "favorable positioning within AI data centers," Chatterjee said. That business "is expected to ramp significantly" amid heightened capital spending by hyperscalers, he said.  
+The company has "favorable positioning within AI data centers," Chatterjee said. That business "is expected to ramp significantly" amid heightened capital spending by hyperscalers, he said.  
+Chatterjee 说，该公司“在 AI 数据中心内具有有利的地位”。他说，在超大规模企业增加资本支出的情况下，该业务“预计将大幅增长”。
 
 
-"We expect Amphenol's AI revenues to expand from about $1 billion in 2024 to about $3 billion in 2025," Chatterjee said.  
+"We expect Amphenol's AI revenues to expand from about $1 billion in 2024 to about $3 billion in 2025," Chatterjee said.  
+“我们预计 Amphenol 的 AI 收入将从 2024 年的约 10 亿美元增长到 2025 年的约 30 亿美元，”Chatterjee 说。
 
 
-Amphenol stock is on the [IBD Tech Leaders](https://www.investors.com/data-tables/ibd-tech-leaders-dec-13-2024/) list.  
+Amphenol stock is on the [IBD Tech Leaders](https://www.investors.com/data-tables/ibd-tech-leaders-dec-13-2024/) list.  
+Amphenol 的股票在 [IBD 技术领导者](https://www.investors.com/data-tables/ibd-tech-leaders-dec-13-2024/)名单上。
 
 
-*Follow Patrick Seitz on X, formerly Twitter, at [@IBD\_PSeitz](https://twitter.com/IBD_PSeitz) for more stories on consumer technology, software and semiconductor stocks.* 
+*Follow Patrick Seitz on X, formerly Twitter, at [@IBD\_PSeitz](https://twitter.com/IBD_PSeitz) for more stories on consumer technology, software and semiconductor stocks.  
+在 [@IBD\_PSeitz](https://twitter.com/IBD_PSeitz) 上关注 Patrick Seitz 的 X（前身为 Twitter），了解有关消费技术、软件和半导体股票的更多故事。*
 
 
-**YOU MAY ALSO LIKE:** 
+**YOU MAY ALSO LIKE:  您可能还喜欢：**
 
 
-[Supermicro Stock Falls As Nasdaq 100 Dumps AI Data Center Specialist](https://www.investors.com/news/technology/smci-stock-nasdaq-100-dumps-supermicro/) 
+[Supermicro Stock Falls As Nasdaq 100 Dumps AI Data Center Specialist  
+Supermicro 股价下跌，纳斯达克 100 指数抛售 AI 数据中心专家](https://www.investors.com/news/technology/smci-stock-nasdaq-100-dumps-supermicro/)
 
 
-[SoundHound Called 'Underappreciated Pure Play AI Company'](https://www.investors.com/news/technology/soun-stock-soundhound-underappreciated-ai-pure-play/) 
+[SoundHound Called 'Underappreciated Pure Play AI Company'  
+SoundHound 被称为“被低估的纯 AI 公司”](https://www.investors.com/news/technology/soun-stock-soundhound-underappreciated-ai-pure-play/)
 
 
-[See Stocks On The List Of Leaders Near A Buy Point](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard) 
+[See Stocks On The List Of Leaders Near A Buy Point  
+查看靠近买入点的领先者名单上的股票](https://www.investors.com/product/leaderboard/?artProdLink=Leaderboard)
 
 
-[Find Winning Stocks With MarketSurge Pattern Recognition & Custom Screens](https://get.investors.com/marketsurge/?src=apa1bq) 
+[Find Winning Stocks With MarketSurge Pattern Recognition & Custom Screens  
+通过MarketSurge模式识别和自定义屏幕找到获胜的股票](https://get.investors.com/marketsurge/?src=apa1bq)
 
 
-[Join IBD Live For Stock Ideas Each Morning Before The Open](https://get.investors.com/ibd-live/) 
+[Join IBD Live For Stock Ideas Each Morning Before The Open  
+每天早上开盘前加入 IBD Live 以获取股票观点](https://get.investors.com/ibd-live/)
 
 
 
